# sdl2-tiled-example

./: .gitignore  CMakeLists.txt  README.md
res/map/: example.tmx
src/: assets.cpp  assets.hpp  game.hpp  level.cpp  level.hpp  main.cpp
